--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
         {
           src: "assets/mock2.png",
           title:
-            "Capture anything from code, stock charts or research instantly",
+            "Capture anything from code, stock charts or articles",
         },
         {
           src: "assets/mock6.png",
