--- a/index.html
+++ b/index.html
@@ -375,6 +375,71 @@
         flex: 0 0 auto;
       }
 
+      /* ====== Chrome-only UI additions ====== */
+      .chrome-pill {
+        display: inline-flex;
+        align-items: center;
+        gap: 10px;
+        padding: 8px 12px;
+        border-radius: 999px;
+        border: 1px solid rgba(34, 211, 238, 0.28);
+        background: rgba(34, 211, 238, 0.07);
+        color: rgba(238, 240, 255, 0.85);
+        font-weight: 950;
+        font-size: 13px;
+      }
+      .chrome-pill strong {
+        font-weight: 1000;
+      }
+      .chrome-ico {
+        width: 16px;
+        height: 16px;
+        border-radius: 999px;
+        background: conic-gradient(
+          from 180deg,
+          #ea4335 0deg 120deg,
+          #fbbc05 120deg 240deg,
+          #34a853 240deg 360deg
+        );
+        position: relative;
+        box-shadow: 0 0 18px rgba(34, 211, 238, 0.22);
+        flex: 0 0 auto;
+      }
+      .chrome-ico::after {
+        content: "";
+        position: absolute;
+        inset: 4px;
+        border-radius: 999px;
+        background: #4285f4;
+        box-shadow: 0 0 12px rgba(66, 133, 244, 0.25);
+      }
+
+      .nav-chip {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+        padding: 10px 12px;
+        border-radius: 999px;
+        border: 1px solid rgba(255, 255, 255, 0.12);
+        background: rgba(255, 255, 255, 0.05);
+        color: rgba(238, 240, 255, 0.82);
+        font-weight: 950;
+        font-size: 12px;
+        white-space: nowrap;
+      }
+
+      .install-note {
+        margin-top: 8px;
+        font-size: 12.5px;
+        line-height: 1.35;
+        color: rgba(238, 240, 255, 0.66);
+        max-width: 60ch;
+      }
+      .install-note b {
+        color: rgba(238, 240, 255, 0.9);
+        font-weight: 950;
+      }
+
       main {
         padding-bottom: 90px;
       }
@@ -413,6 +478,7 @@
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
+        align-items: center;
       }
 
       /* Card + glow edge animation */
@@ -546,7 +612,7 @@
 
       .pricing-grid .price-card {
         position: relative;
-        padding-top: 44px; 
+        padding-top: 44px;
       }
 
       .pricing-grid .price-card .pill {
@@ -716,7 +782,6 @@
           border-radius: 14px;
           min-height: 44px;
         }
-        /* tighten top-right CTA text a bit on small phones */
         .nav-cta .btn {
           font-size: 13px;
         }
@@ -736,7 +801,6 @@
         .hero-ctas {
           gap: 10px;
         }
-        /* stacked CTAs (full width) for best mobile conversion */
         .hero-ctas .btn {
           width: 100%;
         }
@@ -752,29 +816,30 @@
           grid-column: span 12;
         }
 
-        /* card padding a little tighter */
         .card-pad {
           padding: 14px;
         }
 
-        /* shot controls wrap nicely */
         .shot-controls {
           flex-direction: column;
           align-items: flex-start;
           gap: 10px;
         }
 
-        /* prevent pills from feeling cramped */
         .pill {
           font-size: 12px;
           padding: 7px 10px;
         }
+
+        /* On mobile, move nav chip below buttons naturally if tight */
+        .nav-chip {
+          display: none; /* keep header clean on phones */
+        }
       }
 
-      /* super small phones (<= 380px) */
       @media (max-width: 380px) {
         .brand .txt {
-          display: none; /* logo-only to avoid header overflow */
+          display: none;
         }
         .nav-cta .btn {
           padding: 10px 10px;
@@ -782,7 +847,6 @@
         }
       }
 
-      /* performance + battery: reduce heavy background effects on small devices */
       @media (max-width: 720px) {
         .fx::after {
           opacity: 0.03;
@@ -800,7 +864,6 @@
         }
       }
 
-      /* If you reference .dest-grid elsewhere, keep it */
       @media (max-width: 720px) {
         .dest-grid {
           grid-template-columns: repeat(2, 1fr);
@@ -839,14 +902,16 @@
             <a href="#features">Features</a>
             <a href="#how">How it works</a>
             <a href="prompt-engineering.html">Prompt Engineering</a>
-            <a href="#pricing">Pricing</a>
           </nav>
 
           <div class="nav-cta">
+            <span class="nav-chip" title="Courier Web works on desktop Chrome only">
+              <span class="chrome-ico" aria-hidden="true"></span>
+              Chrome (Desktop)
+            </span>
+
             <a class="btn" href="#pricing">Pricing</a>
-            <a class="btn btn-primary" id="topInstall" href="#"
-              >Add to Chrome →</a
-            >
+            <a class="btn btn-primary" id="topInstall" href="#">Add to Chrome →</a>
           </div>
         </div>
       </div>
@@ -860,6 +925,14 @@
               <div class="pill">
                 <span class="spark"></span> Fastest way to route highlights into
                 actions
+              </div>
+
+              <!-- NEW: Chrome-only badge near the hero -->
+              <div class="mini-row" style="margin-top: 10px">
+                <span class="chrome-pill">
+                  <span class="chrome-ico" aria-hidden="true"></span>
+                  <strong>Chrome Extension</strong> · Desktop only
+                </span>
               </div>
 
               <h1>
@@ -879,16 +952,16 @@
                 <a class="btn" href="#features">See features</a>
               </div>
 
+              <!-- NEW: helper line under the main CTA -->
+              <div class="install-note">
+                Works on <b>Google Chrome (desktop)</b>. Not available on Safari,
+                Firefox, or mobile browsers.
+              </div>
+
               <div class="mini-row">
-                <span class="pill"
-                  ><span class="spark"></span> Custom prompts</span
-                >
-                <span class="pill"
-                  ><span class="spark"></span> Clean overlay</span
-                >
-                <span class="pill"
-                  ><span class="spark"></span> Route to tools</span
-                >
+                <span class="pill"><span class="spark"></span> Custom prompts</span>
+                <span class="pill"><span class="spark"></span> Clean overlay</span>
+                <span class="pill"><span class="spark"></span> Route to tools</span>
               </div>
             </div>
 
